# karculatqr

./: .gitignore  MathLibrary.cpp  Prirucka.md  README.md  hodnoceni.txt  skutecnost.txt
plan/: plan.html  plan.txt  zadaniTODO_DEL.html
profiling/: generate_numbers.py
resources/: install.sh  installstddev.sh  karculatqr.desktop  uninstall.sh  uninstallstddev.sh
src/: CMakeLists.txt  Doxyfile  Interface.cpp  Interface.h  MainWindow.cpp  MainWindow.h  Makefile  MathLibrary.cpp  MathLibrary.h  MathLibraryExceptions.cpp  MathLibraryExceptions.h  main.cpp  stddev.cpp
src/stddev/: main.cpp
src/tests/: MathLibraryTest.cpp
